--- a/static/style/src/less/history.less
+++ b/static/style/src/less/history.less
@@ -488,6 +488,7 @@ display: inline-block;
                 border: 1px solid fadeout( @layout-border-color, 50% );
                 padding: 4px;
                 white-space: pre-line;
+                overflow: auto;
             }
             .annotation:empty {
                 height: @icon-btn-size;
